--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ console = "0.14"
 rand = "0.8.4"
 similar = { version = "1.3", features = ["inline"] }
 toml = "0.5.8"
+
+[dev-dependencies]
+similar-asserts = "1.1.0"
